Añade manejo de eventos personalizados con el patrón PubSub en  JS

--- a/app/Views/templates/base.html
+++ b/app/Views/templates/base.html
@@ -33,5 +33,6 @@
     <script src="/js/form-clearinput.js" defer></script>
     <script src="/js/link-submit-form.js" defer></script>
     <script src="/js/anchorize.js" defer></script>
+    <script src="/js/pubsub.js" defer></script>
 </body>
 </html>
