Añade script para sincronizar los campos de cálculo de precio de venta

--- a/app/Views/products/modifyproduct.twig
+++ b/app/Views/products/modifyproduct.twig
@@ -132,4 +132,5 @@
         </div>
     </div>
     <script src="/js/new-product-set-cat-code.js" defer></script>
+    <script src="/js/sync-precio-venta.js" defer></script>
 {% endblock %}
