--- a/app/Views/templates/base.html
+++ b/app/Views/templates/base.html
@@ -27,7 +27,7 @@
     <script src="/js/bootstrap.min.js" defer></script>
 </head>
 <body>
-    {% include 'templates/navbar.html' %}
+    {% include 'templates/navbar.twig' %}
     {% block content %}{% endblock %}
 
     <script src="/js/form-clearinput.js" defer></script>
