--- a/app/Views/templates/navbar.twig
+++ b/app/Views/templates/navbar.twig
@@ -96,11 +96,27 @@
                     Proveedores
                 </a>
             </li>
-            <li class="{% if uri_path == path_for('warehouses') %}active{% endif %}">
-                <a href="{{ path_for('warehouses') }}">
+            {% set warehouses_urls = [path_for('warehouses'), path_for('warehouses/createform')] %}
+            <li class="dropdown {% if uri_path in warehouses_urls %}active{% endif %}">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
                     <span class="glyphicon glyphicon-home"></span>
                     Bodegas
+                    <span class="caret"></span>
                 </a>
+                <ul class="dropdown-menu">
+                    <li class="{% if uri_path == path_for('warehouses/createform') %}active{% endif %}">
+                        <a href="{{ path_for('warehouses/createform') }}">
+                            <span class="glyphicon glyphicon-plus-sign"></span>
+                            Nueva Bodega
+                        </a>
+                    </li>
+                    <li class="{% if uri_path == path_for('warehouses') %}active{% endif %}">
+                        <a href="{{ path_for('warehouses') }}">
+                            <span class="glyphicon glyphicon-home"></span>
+                            Ver Bodegas
+                        </a>
+                    </li>
+                </ul>
             </li>
             {% set clientes_urls = [path_for('clientes/personas'), path_for('clientes/empresas')] %}
             <li class="dropdown {% if uri_path in clientes_urls %}active{% endif %}">
