--- a/app/Views/warehouses/updatewarehouse.twig
+++ b/app/Views/warehouses/updatewarehouse.twig
@@ -21,7 +21,7 @@
                                 <input type="text" name="nombreAlmacen" value="{{ input.nombreAlmacen }}" class="form-control" id="nombreAlmacen">
                                 <span class="form-control-clear glyphicon glyphicon-remove form-control-feedback {% if not input.nombreAlmacen %}hidden{% endif %}"></span>
                             </div>
-                            <button type="submit" class="btn btn-block btn-info"><span class="glyphicon glyphicon-plus-sign"></span> Crear Almacen</button>
+                            <button type="submit" class="btn btn-block btn-info"><span class="glyphicon glyphicon-edit"></span> Modificar Almacén</button>
                         </form>
                     </div>
                 </div>
