Añade formulario para entrada de productos existentes

--- a/app/Views/products/modifyproduct.twig
+++ b/app/Views/products/modifyproduct.twig
@@ -130,6 +130,11 @@
                 </div>
             </div>
         </div>
+        <div class="row">
+            <div class="col-sm-12 col-md-10 col-md-offset-1 col-lg-8 col-lg-offset-2">
+                {% include 'products/ingresarproducto.twig' %}
+            </div>
+        </div>
     </div>
     <script src="/js/new-product-set-cat-code.js" defer></script>
     <script src="/js/sync-precio-venta.js" defer></script>
