--- a/app/Views/products/ingresarproducto.twig
+++ b/app/Views/products/ingresarproducto.twig
@@ -1,7 +1,7 @@
 <div class="panel panel-primary">
     <div class="panel-heading clearfix">Entrada de Producto <span class="pull-right">Cantidad Actual: {{ cantidadActual }}</span></div>
     <div class="panel-body">
-        <form action="{{ path_for('ingresos', {'id': productID}) }}" method="post">
+        <form action="{{ path_for('products/ingresos', {'id': productID}) }}" method="post">
             <div class="form-group">
                 <label for="cantidadIngreso">Cantidad a Ingresar</label>
                 <input type="number" name="cantidadIngreso" value="{{ input.cantidadIngreso ?? 0 }}" class="form-control" id="cantidadIngreso">
