Añade link a lista de detalles de ingreso al navbar

--- a/app/Views/templates/navbar.twig
+++ b/app/Views/templates/navbar.twig
@@ -44,7 +44,7 @@
                     </li>
                 </ul>
             </li>
-            {% set productos_urls = [path_for('products/createform'), path_for('categories/createform'), path_for('products'), path_for('categories'), path_for('brands'), path_for('measurements')] %}
+            {% set productos_urls = [path_for('products/createform'), path_for('categories/createform'), path_for('products'), path_for('categories'), path_for('brands'), path_for('measurements'), path_for('ingresos')] %}
             <li class="dropdown {% if uri_path in productos_urls %}active{% endif %}">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
                     <span class="glyphicon glyphicon-gift"></span>
@@ -86,6 +86,11 @@
                         <a href="{{ path_for('measurements') }}">
                             <span class="glyphicon glyphicon-scale"></span>
                             Ver Medidas
+                        </a>
+                    </li><li class="{% if uri_path == path_for('ingresos') %}active{% endif %}">
+                        <a href="{{ path_for('ingresos') }}">
+                            <span class="glyphicon glyphicon-plus-sign"></span>
+                            Ver Detalles de Entradas
                         </a>
                     </li>
                 </ul>
