Agrega información sobre la dirección y el teléfono a la lista de almacenes

--- a/app/Views/warehouses/warehouses.twig
+++ b/app/Views/warehouses/warehouses.twig
@@ -46,6 +46,8 @@
                                     <th>ID</th>
                                     <th>Nombre</th>
                                     <th>Cantidad de Productos</th>
+                                    <th>Teléfono</th>
+                                    <th>Dirección</th>
                                 </tr>
                             </thead>
 
@@ -55,6 +57,8 @@
                                     <td>{{ warehouse.AlmacenID }}</td>
                                     <td>{{ warehouse.NombreAlmacen }}</td>
                                     <td>{{ warehouse.Cantidad }}</td>
+                                    <td>{{ warehouse.Telefono }}</td>
+                                    <td>{{ warehouse.Direccion }}</td>
                                 </tr>
                             {% else %}
                             </tbody>
