Cambia vista de ingreso de producto para aclarar un término

--- a/app/Views/products/ingresarproducto.twig
+++ b/app/Views/products/ingresarproducto.twig
@@ -1,5 +1,5 @@
 <div class="panel panel-primary">
-    <div class="panel-heading clearfix">Entrada de Producto <span class="pull-right">Cantidad Actual: {{ cantidadActual }}</span></div>
+    <div class="panel-heading clearfix">Entrada de Producto <span class="pull-right">Cantidad Total: {{ cantidadActual }}</span></div>
     <div class="panel-body">
         <form action="{{ path_for('products/ingresos', {'id': productID}) }}" method="post">
             <div class="form-group">
