--- a/app/Views/products/products.twig
+++ b/app/Views/products/products.twig
@@ -1,4 +1,4 @@
-{% extends 'templates/base.html' %}
+{% extends 'templates/base.twig' %}
 
 {% block title  %}Productos{% endblock %}
 
@@ -95,7 +95,7 @@
                         <small class="text-muted">*Precios con IVA incluido</small>
                     </div>
                 </div>
-                {% include 'templates/listpagination.html' %}
+                {% include 'templates/listpagination.twig' %}
             </div>
         </div>
     </div>
