--- a/app/Views/providers/providers.twig
+++ b/app/Views/providers/providers.twig
@@ -1,4 +1,4 @@
-{% extends 'templates/base.html' %}
+{% extends 'templates/base.twig' %}
 
 {% block title %}Proveedores{% endblock %}
 
@@ -70,7 +70,7 @@
                         </table>
                     </div>
                 </div>
-                {% include 'templates/listpagination.html' %}
+                {% include 'templates/listpagination.twig' %}
             </div>
         </div>
     </div>
