--- a/app/Views/categories/categories.twig
+++ b/app/Views/categories/categories.twig
@@ -1,6 +1,6 @@
-{% extends 'templates/base.html' %}
+{% extends 'templates/base.twig' %}
 
-{% block title %}Marcas{% endblock %}
+{% block title %}Categorías{% endblock %}
 
 {% block content %}
     <div class="container-fluid">
@@ -8,18 +8,23 @@
             <div class="col-sm-10 col-sm-offset-1 col-md-4 col-md-offset-0 col-lg-3">
                 <div class="panel panel-primary">
                     <div class="panel-heading">
-                        <h2 class="panel-title">Búsqueda de Marcas</h2>
+                        <h2 class="panel-title">Búsqueda de Categorías</h2>
                     </div>
                     <div class="panel-body">
-                        <form id="brandsForm" action="{{ path_for('brands') }}" method="get" role="form">
+                        <form id="categoriesForm" action="{{ path_for('categories') }}" method="get" role="form">
                             <div class="form-group has-feedback has-clear">
-                                <label for="nombreMarca">Nombre</label>
-                                <input id="nombreMarca" class="form-control" type="text" name="nombreMarca" placeholder="Nombre de la marca" value="{{ input.nombreMarca }}">
-                                <span class="form-control-clear glyphicon glyphicon-remove form-control-feedback {% if not input.nombreMarca %}hidden{% endif %}"></span>
+                                <label for="codigoCategoria">Código</label>
+                                <input id="codigoCategoria" class="form-control" type="text" name="codigoCategoria" placeholder="Código de la categoría" value="{{ input.codigoCategoria }}">
+                                <span class="form-control-clear glyphicon glyphicon-remove form-control-feedback {% if not input.codigoCategoria %}hidden{% endif %}"></span>
+                            </div>
+                            <div class="form-group has-feedback has-clear">
+                                <label for="nombreCategoria">Nombre</label>
+                                <input id="nombreCategoria" class="form-control" type="text" name="nombreCategoria" placeholder="Nombre de la categoría" value="{{ input.nombreCategoria }}">
+                                <span class="form-control-clear glyphicon glyphicon-remove form-control-feedback {% if not input.nombreCategoria %}hidden{% endif %}"></span>
                             </div>
                             <div class="form-group">
-                                <label for="brandsPerPage">Cantidad por página</label>
-                                <select id="brandsPerPage" class="form-control" name="itemsPerPage">
+                                <label for="categoriesPerPage">Cantidad por página</label>
+                                <select id="categoriesPerPage" class="form-control" name="itemsPerPage">
                                     {% set perPageOpts = [10, 25, 50] %}
                                     {% for opt in perPageOpts %}
                                         <option value="{{ opt }}" {% if pagination.itemsPerPage == opt %}selected{% endif %}>{{ opt }}</option>
@@ -35,7 +40,7 @@
                 </div>
             </div>
             <div class="col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-0 col-lg-9">
-                <div class="panel no-margin-bottom {% if brands %}panel-primary{% else %}panel-default{% endif %}">
+                <div class="panel no-margin-bottom {% if categories %}panel-primary{% else %}panel-default{% endif %}">
                     <div class="panel-heading">
                         <h2 class="panel-title">{{ pagination.totalItems }} Resultados</h2>
                     </div>
@@ -43,15 +48,15 @@
                         <table class="table table-hover">
                             <thead>
                                 <tr>
-                                    <th>ID</th>
+                                    <th>Código</th>
                                     <th>Nombre</th>
                                 </tr>
                             </thead>
                             <tbody>
-                                {% for brand in brands %}
-                                <tr class="anchorize" data-href="{{ path_for('brands') }}/id/{{ brand.MarcaID }}">
-                                    <td>{{ brand.MarcaID }}</td>
-                                    <td>{{ brand.Nombre }}</td>
+                                {% for category in categories %}
+                                <tr class="anchorize" data-href="{{ path_for('categories') }}/id/{{ category.CategoriaProductoID }}">
+                                    <td>{{ category.CategoriaProductoID }}</td>
+                                    <td>{{ category.Nombre }}</td>
                                 </tr>
                                 {% else %}
                             </tbody>
@@ -60,7 +65,7 @@
                         </table>
                     </div>
                 </div>
-                {% include 'templates/listpagination.html' %}
+                {% include 'templates/listpagination.twig' %}
             </div>
         </div>
     </div>
