--- a/app/Views/tirajes/listatirajes.twig
+++ b/app/Views/tirajes/listatirajes.twig
@@ -1,6 +1,6 @@
-{% extends 'templates/base.html' %}
+{% extends 'templates/base.twig' %}
 
-{% block title %}Categorías{% endblock %}
+{% block title %}Tirajes de Factura{% endblock %}
 
 {% block content %}
     <div class="container-fluid">
@@ -8,23 +8,18 @@
             <div class="col-sm-10 col-sm-offset-1 col-md-4 col-md-offset-0 col-lg-3">
                 <div class="panel panel-primary">
                     <div class="panel-heading">
-                        <h2 class="panel-title">Búsqueda de Categorías</h2>
+                        <h2 class="panel-title">Búsqueda de Tirajes</h2>
                     </div>
                     <div class="panel-body">
-                        <form id="categoriesForm" action="{{ path_for('categories') }}" method="get" role="form">
+                        <form id="tirajesForm" action="{{ path_for('tirajes') }}" method="get" role="form">
                             <div class="form-group has-feedback has-clear">
-                                <label for="codigoCategoria">Código</label>
-                                <input id="codigoCategoria" class="form-control" type="text" name="codigoCategoria" placeholder="Código de la categoría" value="{{ input.codigoCategoria }}">
-                                <span class="form-control-clear glyphicon glyphicon-remove form-control-feedback {% if not input.codigoCategoria %}hidden{% endif %}"></span>
-                            </div>
-                            <div class="form-group has-feedback has-clear">
-                                <label for="nombreCategoria">Nombre</label>
-                                <input id="nombreCategoria" class="form-control" type="text" name="nombreCategoria" placeholder="Nombre de la categoría" value="{{ input.nombreCategoria }}">
-                                <span class="form-control-clear glyphicon glyphicon-remove form-control-feedback {% if not input.nombreCategoria %}hidden{% endif %}"></span>
+                                <label for="codigoTiraje">Código</label>
+                                <input id="codigoTiraje" class="form-control" type="text" name="codigoTiraje" placeholder="Código del tiraje" value="{{ input.codigoTiraje }}">
+                                <span class="form-control-clear glyphicon glyphicon-remove form-control-feedback {% if not input.codigoTiraje %}hidden{% endif %}"></span>
                             </div>
                             <div class="form-group">
-                                <label for="categoriesPerPage">Cantidad por página</label>
-                                <select id="categoriesPerPage" class="form-control" name="itemsPerPage">
+                                <label for="itemsPerPage">Cantidad por página</label>
+                                <select id="itemsPerPage" class="form-control" name="itemsPerPage">
                                     {% set perPageOpts = [10, 25, 50] %}
                                     {% for opt in perPageOpts %}
                                         <option value="{{ opt }}" {% if pagination.itemsPerPage == opt %}selected{% endif %}>{{ opt }}</option>
@@ -40,7 +35,7 @@
                 </div>
             </div>
             <div class="col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-0 col-lg-9">
-                <div class="panel no-margin-bottom {% if categories %}panel-primary{% else %}panel-default{% endif %}">
+                <div class="panel no-margin-bottom {% if tirajes %}panel-primary{% else %}panel-default{% endif %}">
                     <div class="panel-heading">
                         <h2 class="panel-title">{{ pagination.totalItems }} Resultados</h2>
                     </div>
@@ -49,14 +44,18 @@
                             <thead>
                                 <tr>
                                     <th>Código</th>
-                                    <th>Nombre</th>
+                                    <th>Correlativo Inicial</th>
+                                    <th>Correlativo Final</th>
+                                    <th>Correlativo Actual</th>
                                 </tr>
                             </thead>
                             <tbody>
-                                {% for category in categories %}
-                                <tr class="anchorize" data-href="{{ path_for('categories') }}/id/{{ category.CategoriaProductoID }}">
-                                    <td>{{ category.CategoriaProductoID }}</td>
-                                    <td>{{ category.Nombre }}</td>
+                                {% for tiraje in tirajes %}
+                                <tr class="anchorize" data-href="{{ path_for('tirajes') }}/id/{{ tiraje.TirajeFacturaID }}">
+                                    <td>{{ tiraje.CodigoTiraje }}</td>
+                                    <td>{{ tiraje.TirajeDesde }}</td>
+                                    <td>{{ tiraje.TirajeHasta }}</td>
+                                    <td>{{ tiraje.MaxCorrelativo }}</td>
                                 </tr>
                                 {% else %}
                             </tbody>
@@ -65,7 +64,7 @@
                         </table>
                     </div>
                 </div>
-                {% include 'templates/listpagination.html' %}
+                {% include 'templates/listpagination.twig' %}
             </div>
         </div>
     </div>
