--- a/app/Views/unitsofmeasurement/measurements.twig
+++ b/app/Views/unitsofmeasurement/measurements.twig
@@ -1,6 +1,6 @@
-{% extends 'templates/base.html' %}
+{% extends 'templates/base.twig' %}
 
-{% block title %}Tirajes de Factura{% endblock %}
+{% block title  %}Medidas{% endblock %}
 
 {% block content %}
     <div class="container-fluid">
@@ -8,18 +8,18 @@
             <div class="col-sm-10 col-sm-offset-1 col-md-4 col-md-offset-0 col-lg-3">
                 <div class="panel panel-primary">
                     <div class="panel-heading">
-                        <h2 class="panel-title">Búsqueda de Tirajes</h2>
+                        <h2 class="panel-title">Búsqueda de Unidades de Medida</h2>
                     </div>
                     <div class="panel-body">
-                        <form id="tirajesForm" action="{{ path_for('tirajes') }}" method="get" role="form">
+                        <form id="medidasForm" action="{{ path_for('measurements') }}" method="get" role="form">
                             <div class="form-group has-feedback has-clear">
-                                <label for="codigoTiraje">Código</label>
-                                <input id="codigoTiraje" class="form-control" type="text" name="codigoTiraje" placeholder="Código del tiraje" value="{{ input.codigoTiraje }}">
-                                <span class="form-control-clear glyphicon glyphicon-remove form-control-feedback {% if not input.codigoTiraje %}hidden{% endif %}"></span>
+                                <label for="nombreMedida">Nombre</label>
+                                <input id="nombreMedida" class="form-control" type="text" name="nombreMedida" placeholder="Nombre de la unidad de medida" value="{{ input.nombreMedida }}">
+                                <span class="form-control-clear glyphicon glyphicon-remove form-control-feedback {% if not input.nombreMedida %}hidden{% endif %}"></span>
                             </div>
                             <div class="form-group">
-                                <label for="itemsPerPage">Cantidad por página</label>
-                                <select id="itemsPerPage" class="form-control" name="itemsPerPage">
+                                <label for="productsPerPage">Cantidad por página</label>
+                                <select id="productsPerPage" class="form-control" name="itemsPerPage">
                                     {% set perPageOpts = [10, 25, 50] %}
                                     {% for opt in perPageOpts %}
                                         <option value="{{ opt }}" {% if pagination.itemsPerPage == opt %}selected{% endif %}>{{ opt }}</option>
@@ -27,7 +27,7 @@
                                 </select>
                             </div>
                             <input type="hidden" name="currentPage" value="{{ pagination.currentPage }}">
-                            <button class="btn btn-block btn-info link-submit" type="submit" data-input="currentPage" data-value="1">
+                            <button class="btn btn-info btn-block link-submit" type="submit" data-input="currentPage" data-value="1" >
                                 <span class="glyphicon glyphicon-search" aria-hidden="true"></span> Buscar
                             </button>
                         </form>
@@ -35,7 +35,7 @@
                 </div>
             </div>
             <div class="col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-0 col-lg-9">
-                <div class="panel no-margin-bottom {% if tirajes %}panel-primary{% else %}panel-default{% endif %}">
+                <div class="panel no-margin-bottom {% if measurements %}panel-primary{% else %}panel-default{% endif %}">
                     <div class="panel-heading">
                         <h2 class="panel-title">{{ pagination.totalItems }} Resultados</h2>
                     </div>
@@ -43,19 +43,15 @@
                         <table class="table table-hover">
                             <thead>
                                 <tr>
-                                    <th>Código</th>
-                                    <th>Correlativo Inicial</th>
-                                    <th>Correlativo Final</th>
-                                    <th>Correlativo Actual</th>
+                                    <th>ID</th>
+                                    <th>Nombre</th>
                                 </tr>
                             </thead>
                             <tbody>
-                                {% for tiraje in tirajes %}
-                                <tr class="anchorize" data-href="{{ path_for('tirajes') }}/id/{{ tiraje.TirajeFacturaID }}">
-                                    <td>{{ tiraje.CodigoTiraje }}</td>
-                                    <td>{{ tiraje.TirajeDesde }}</td>
-                                    <td>{{ tiraje.TirajeHasta }}</td>
-                                    <td>{{ tiraje.MaxCorrelativo }}</td>
+                                {% for unit in measurements %}
+                                <tr class="anchorize" data-href="{{ path_for('measurements') }}/id/{{ unit.MedidaID }}">
+                                    <td>{{ unit.MedidaID }}</td>
+                                    <td>{{ unit.UnidadMedida }}</td>
                                 </tr>
                                 {% else %}
                             </tbody>
@@ -64,7 +60,7 @@
                         </table>
                     </div>
                 </div>
-                {% include 'templates/listpagination.html' %}
+                {% include 'templates/listpagination.twig' %}
             </div>
         </div>
     </div>
