--- a/app/Views/warehouses/warehouses.twig
+++ b/app/Views/warehouses/warehouses.twig
@@ -1,4 +1,4 @@
-{% extends 'templates/base.html' %}
+{% extends 'templates/base.twig' %}
 
 {% block title %}Almacenes{% endblock %}
 
@@ -67,7 +67,7 @@
                         </table>
                     </div>
                 </div>
-                {% include 'templates/listpagination.html' %}
+                {% include 'templates/listpagination.twig' %}
             </div>
         </div>
     </div>
