--- a/app/Views/clients/clientepersona.twig
+++ b/app/Views/clients/clientepersona.twig
@@ -1,6 +1,6 @@
 {% extends 'templates/base.twig' %}
 
-{% block title  %}Clientes{% endblock %}
+{% block title %}Clientes{% endblock %}
 
 {% block content %}
     <div class="container-fluid">
@@ -42,7 +42,7 @@
                                 </select>
                             </div>
                             <input type="hidden" name="currentPage" value="{{ pagination.currentPage }}">
-                            <button class="btn btn-block btn-info link-submit" type="submit" data-input="currentPage" data-value="1" >
+                            <button class="btn btn-block btn-info link-submit" type="submit" data-input="currentPage" data-value="1">
                                 <span class="glyphicon glyphicon-search" aria-hidden="true"></span> Buscar
                             </button>
                         </form>
@@ -56,23 +56,27 @@
                     </div>
                     <div class="table-responsive">
                         <table class="table table-striped">
+                            {% if not clients %}
+                                <caption class="bottom-captions text-center">No se encontraron resultados</caption>
+                            {% endif %}
+                            <thead>
                             <tr>
                                 <th>Nombres</th>
                                 <th>Apellidos</th>
                                 <th>DUI</th>
                                 <th>NIT</th>
                             </tr>
+                            </thead>
+                            <tbody>
                             {% for client in clients %}
-                            <tr>
-                                <td>{{ client.Nombres }}</td>
-                                <td>{{ client.Apellidos }}</td>
-                                <td>{{ client.DUI }}</td>
-                                <td>{{ client.NIT }}</td>
-                            </tr>
-                            {% else %}
-                            <caption class="bottom-captions text-center">No se encontraron resultados</caption>
+                                <tr>
+                                    <td>{{ client.Nombres }}</td>
+                                    <td>{{ client.Apellidos }}</td>
+                                    <td>{{ client.DUI }}</td>
+                                    <td>{{ client.NIT }}</td>
+                                </tr>
                             {% endfor %}
-
+                            </tbody>
                         </table>
                     </div>
                 </div>
