--- a/app/Views/ingresos/ingresos.twig
+++ b/app/Views/ingresos/ingresos.twig
@@ -18,9 +18,9 @@
                                 <span class="form-control-clear glyphicon glyphicon-remove form-control-feedback {% if not input.codigoProducto %}hidden{% endif %}"></span>
                             </div>
                             <div class="form-group has-feedback has-clear">
-                                <label for="numregProveedor">Número de Registro del Proveedor</label>
-                                <input id="numregProveedor" class="form-control" type="text" name="numregProveedor" placeholder="Número de registro de el proveedor" value="{{ input.numregProveedor }}">
-                                <span class="form-control-clear glyphicon glyphicon-remove form-control-feedback {% if not input.numregProveedor %}hidden{% endif %}"></span>
+                                <label for="nombreProveedor">Nombre del Proveedor</label>
+                                <input id="nombreProveedor" class="form-control" type="text" name="nombreProveedor" placeholder="Nombre de el proveedor" value="{{ input.nombreProveedor }}">
+                                <span class="form-control-clear glyphicon glyphicon-remove form-control-feedback {% if not input.nombreProveedor %}hidden{% endif %}"></span>
                             </div>
                             <div class="form-group">
                                 <label for="almacenID">Almacén</label>
