Cambia vista de existencia de producto para mostrar solo almacenes con cantidad positiva

--- a/app/Views/products/existenciaproducto.twig
+++ b/app/Views/products/existenciaproducto.twig
@@ -14,7 +14,7 @@
             </tr>
             </thead>
             <tbody>
-            {% for almacen in existencia %}
+            {% for almacen in existencia if almacen.Cantidad > 0 %}
                 <tr>
                     <td>{{ almacen.NombreAlmacen }}</td>
                     <td>{{ almacen.Cantidad }}</td>
