Cambia la vista de modificar producto para incluir la vista de traslado

--- a/app/Views/products/modifyproduct.twig
+++ b/app/Views/products/modifyproduct.twig
@@ -137,7 +137,14 @@
         </div>
         <div class="row">
             <div class="col-sm-12 col-md-10 col-md-offset-1 col-lg-8 col-lg-offset-2">
-                {% include 'products/existenciaproducto.twig' %}
+                <div class="row">
+                    <div class="col-sm-6">
+                        {% include 'products/existenciaproducto.twig' %}
+                    </div>
+                    <div class="col-sm-6">
+                        {% include 'products/trasladoproducto.twig' %}
+                    </div>
+                </div>
             </div>
         </div>
     </div>
