--- a/app/Views/products/modifyproduct.twig
+++ b/app/Views/products/modifyproduct.twig
@@ -119,7 +119,11 @@
                                         <label for="precioVentaIVAProducto">Precio de Venta + IVA</label>
                                         <div class="input-group">
                                             <span class="input-group-addon">$</span>
-                                            <input type="number" value="{{ ((input.utilidadProducto ?? 0 + input.valorCostoActualTotal ?? 0) * (1 + porcentajeIVA / 100))|number_format(4) }}" class="form-control" id="precioVentaIVAProducto" step="any" data-iva="{{ porcentajeIVA }}">
+                                            {% if input.excentoIvaProducto %}
+                                                <input disabled type="text" value="Producto excento de IVA" class="form-control" id="precioVentaIVAProducto" step="any" data-iva="{{ porcentajeIVA }}">
+                                            {% else %}
+                                                <input type="number" value="{{ ((input.utilidadProducto ?? 0 + input.valorCostoActualTotal ?? 0) * (1 + porcentajeIVA / 100))|number_format(4) }}" class="form-control" id="precioVentaIVAProducto" step="any" data-iva="{{ porcentajeIVA }}">
+                                            {% endif %}
                                         </div>
                                     </div>
                                 </div>
