--- a/app/Views/templates/navbar.twig
+++ b/app/Views/templates/navbar.twig
@@ -118,7 +118,7 @@
                     </li>
                 </ul>
             </li>
-            {% set contactos_urls = [path_for('empresas/createform'), path_for('providers'), path_for('clientes/personas'), path_for('clientes/empresas')] %}
+            {% set contactos_urls = [path_for('empresas/createform'), path_for('providers'), path_for('clientes/personas'), path_for('clientes/empresas'), path_for('clientes/createform')] %}
             <li class="dropdown {% if uri_path in contactos_urls %}active{% endif %}">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
                     <span class="glyphicon glyphicon-earphone"></span>
@@ -130,6 +130,12 @@
                         <a href="{{ path_for('empresas/createform') }}">
                             <span class="glyphicon glyphicon-plus-sign"></span>
                             Nuevo Contacto Empresa
+                        </a>
+                    </li>
+                    <li class="{% if uri_path == path_for('clientes/createform') %}active{% endif %}">
+                        <a href="{{ path_for('clientes/createform') }}">
+                            <span class="glyphicon glyphicon-plus-sign"></span>
+                            Nuevo Contacto Cliente
                         </a>
                     </li>
                     <li class="{% if uri_path == path_for('empresas') %}active{% endif %}">
