--- a/app/Views/clients/clientepersona.twig
+++ b/app/Views/clients/clientepersona.twig
@@ -55,7 +55,7 @@
                         <h2 class="panel-title">{{ pagination.totalItems }} Resultados</h2>
                     </div>
                     <div class="table-responsive">
-                        <table class="table table-striped">
+                        <table class="table table-hover">
                             {% if not clients %}
                                 <caption class="bottom-captions text-center">No se encontraron resultados</caption>
                             {% endif %}
@@ -69,7 +69,7 @@
                             </thead>
                             <tbody>
                             {% for client in clients %}
-                                <tr>
+                                <tr class="anchorize" data-href="{{ path_for('clientes/update', {id: client.ClientesPersonasID}) }}">
                                     <td>{{ client.Nombres }}</td>
                                     <td>{{ client.Apellidos }}</td>
                                     <td>{{ client.DUI }}</td>
